src/puter/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: puter
  namespace: puter
spec:
  serviceName: puter
  replicas: 1
  selector:
    matchLabels:
      app: puter
  template:
    metadata:
      labels:
        app: puter
    spec:
      containers:
        - name: puter
          image: ghcr.io/heyputer/puter:latest
          ports:
            - name: http
              containerPort: 4100
              protocol: TCP
          volumeMounts:
            - name: puter-config
              mountPath: /etc/puter
            - name: puter-data
              mountPath: /var/puter
  volumeClaimTemplates:
    - metadata:
        name: puter-config
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: puter-data
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: local-path
        resources:
          requests:
            storage: 5Gi
