src/puter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: puter
  namespace: puter
spec:
  selector:
    app: puter
  ports:
    - name: http
      port: 4100
      targetPort: http
